--- a/about.html
+++ b/about.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Contact</title>
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
+    <title>Hawkins Photo and Video</title>
+  </head>
+  <body>
+    <div style="height:47px;" ></div>
+    <nav>
+      <h1>
+        <ul>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li style="float:right" class="active"><a href="about.html">About</a></li>
+          <li style="float:right"><a href="contact.html">Contact</a></li>
+        </ul>
+      </h1>
+    </nav>
+    <p></p>
+    <script src="scripts/main.js"></script>
+  </body>
 </html>
