--- a/gallery.html
+++ b/gallery.html
@@ -8,17 +8,17 @@
     <title>Hawkins Photo and Video</title>
   </head>
   <body>
-    <div style="height:47px;" ></div>
+    <div style="height:47px;"></div>
     <nav>
       <h1>
         <ul>
-          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="gallery.html" class="active">Gallery</a></li>
           <li style="float:right"><a href="about.html">About</a></li>
-          <li style="float:right" class="active"><a href="contact.html">Contact</a></li>
+          <li style="float:right"><a href="contact.html">Contact</a></li>
         </ul>
       </h1>
     </nav>
-    <p></p>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
